# Lines-Counter-Package

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGE_SUMMARY.md  README.md  build.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_usage.py
src/lines_counter/: __init__.py  cli.py  core.py  file_analyzer.py  utils.py
src/lines_counter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_core.py  test_file_analyzer.py
